# rust-curlit

./: .gitignore  Cargo.toml  README.md
src/: cache.rs  cli.rs  config.rs  error.rs  fetch.rs  main.rs  shell.rs  tabular.rs
src/commands/: add.rs  cache.rs  completions.rs  delete.rs  init.rs  install.rs  mod.rs  now.rs  view.rs
